corrected spacing and color on social media pane

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -62,76 +62,25 @@ $media-breakpoint-down: (
   }
 }
 
-// Small tablets and large smartphones (landscape view)
-$screen-sm-min: 576px;
+// // Small tablets and large smartphones (landscape view)
+// $screen-sm-min: 576px;
 
-// Small tablets (portrait view)
-$screen-md-min: 768px;
+// // Small tablets (portrait view)
+// $screen-md-min: 768px;
 
-// Tablets and small desktops
-$screen-lg-min: 992px;
+// // Tablets and small desktops
+// $screen-lg-min: 992px;
 
-// Large tablets and desktops
-$screen-xl-min: 1200px;
+// // Large tablets and desktops
+// $screen-xl-min: 1200px;
 
-// Design colors
+// Color Pallet
 
-$primary-kclowns-red: #cc0000;
+$primary: #cc0000;
+$secondary: #333;
+$thirds: whitesmoke;
 
-// // Small devices
-// @mixin sm {
-//   @media (min-width: #{$screen-sm-min}) {
-//     @content;
-//   }
-// }
-
-// // Medium devices
-// @mixin md {
-//   @media (min-width: #{$screen-md-min}) {
-//     @content;
-//   }
-// }
-
-// // Large devices
-// @mixin lg {
-//   @media (min-width: #{$screen-lg-min}) {
-//     @content;
-//   }
-// }
-
-// // Extra large devices
-// @mixin xl {
-//   @media (min-width: #{$screen-xl-min}) {
-//     @content;
-//   }
-// }
-
-// // Custom devices
-// @mixin rwd($screen) {
-//   @media (min-width: $screen+'px') {
-//     @content;
-//   }
-// }
-
-.container {
-  padding: 0 15px;
-  // 576px window width and more
-  @include sm {
-    padding: 0 20px;
-  }
-  // 992px window width and more
-  @include lg {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1100px;
-  }
-  // 1400px window width and more
-  @include rwd(1400) {
-    margin-bottom: 20px;
-    margin-top: 20px;
-  }
-}
-
+/********************************************/
 /**nav-bar**/
 .nav-bar {
   font-size: 2rem;
@@ -144,28 +93,17 @@ $primary-kclowns-red: #cc0000;
   }
 }
 
-/**tip jar**/
-.tip-jar {
-  border: 10px;
-}
 /**Social Media**/
 .socialMediaPane {
-  background-color: #333;
-  color: whitesmoke;
+  background-color: $secondary;
   padding-bottom: 0.75rem;
 }
 
-.social {
-  list-style-type: none;
-  background-color: blue;
-}
-
-.fa-facebook {
-  color: whitesmoke;
-  padding: 10px;
-}
-.fa-instagram {
-  color: whitesmoke;
+.fa-facebook,
+.fa-instagram,
+.fa-twitter,
+.fa-money-bill-alt {
+  color: $thirds;
   padding: 10px;
 }
 
